feat: Enhance inventory management with Compra and DetalleCompra models, add PagoCredito functionality, and update Cliente and Credito services